# erigon_db_reader

./: Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml
asset/: sepolia_10000_500000_all_logs.parquet
src/: main.rs
src/engine/: mod.rs
src/http/: mod.rs  types.rs
src/storage/: mod.rs
src/types/: mod.rs
src/util/: mod.rs
